--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-template",
+  "name": "nextjs-template-sass",
   "version": "1.0.0",
   "license": "MIT",
   "author": "Guilherme Felipe",
@@ -17,12 +17,12 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-is": "^17.0.2",
-    "styled-components": "^5.3.3"
+    "sass": "^1.43.4"
   },
   "devDependencies": {
     "@types/node": "^16.11.9",
-    "@types/styled-components": "^5.1.15",
-    "babel-plugin-styled-components": "^1.13.3",
+    "@types/react": "^17.0.35",
+    "@types/sass": "^1.43.0",
     "eslint": "8.2.0",
     "eslint-config-next": "12.0.4",
     "husky": "^7.0.0",
