--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true,
     "baseUrl": "./src",
+    "incremental": true
   },
   "include": [
     "next-env.d.ts",
