--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,5 @@
 .git
+.next
 # Build output
 build/
 # Dependency directories
@@ -7,6 +8,7 @@ node_modules/
 *.error
 # dotenv environment variables file (build for Zeit Now)
 .env
+.env.local
 .env.build
 .env.development
 # Logs
